--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -5,7 +5,7 @@ parameters:
     database_port: null
     database_name: project_jared
     database_user: root
-    database_password: root
+    database_password:
     
     mailer_transport: "gmail"
     mailer_encryption: "ssl"
