--- a/src/Nzo/JaredBundle/Resources/config/routing.yml
+++ b/src/Nzo/JaredBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
+jared_user_homepage:
+    pattern:  /user/
+    defaults: { _controller: NzoJaredBundle:Users:index }  
     
 #FOS USER 
 fos_user_security:
