--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,11 +20,11 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
-                login_path:     /login
+                login_path:     /
                 use_forward:    false
                 check_path:     /login_check
                 failure_path:   null
-                default_target_path: /
+                default_target_path: /user
                 remember_me: true
             remember_me:
                 key:         %secret%
@@ -34,7 +34,9 @@ security:
             anonymous:    true
         
     access_control:
+    - { path: ^/$, role: IS_AUTHENTICATED_ANONYMOUSLY }  
     - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/admin/, role: ROLE_ADMIN }
+    - { path: ^/user/, role: ROLE_USER }
